<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/profile"
        style="@style/ProfileTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile"
        android:scaleX="-1"
        android:src="@drawable/icon_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/avatar"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <TextView
        android:id="@+id/name"
        style="@style/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="122dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profession"
        style="@style/profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/actress"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/link"
        android:textColorLink="@color/link_color"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/profession" />

    <ImageView
        android:id="@+id/more_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/more_dot"
        android:src="@drawable/icon_more_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profession"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:tint="@color/grey" />

    <View
        android:id="@+id/horizontal_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="10dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/posts_value"
        style="@style/values"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_1" />

    <TextView
        android:id="@+id/followers_value"
        style="@style/values"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="1430"
        app:layout_constraintStart_toEndOf="@+id/posts_value"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_1" />

    <TextView
        android:id="@+id/following_value"
        style="@style/values"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:text="311"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_line_1" />

    <TextView
        android:id="@+id/posts"
        style="@style/profession"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/posts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posts_value" />

    <TextView
        android:id="@+id/followers"
        style="@style/profession"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/followers"
        app:layout_constraintStart_toEndOf="@+id/posts"
        app:layout_constraintTop_toBottomOf="@+id/followers_value" />

    <TextView
        android:id="@+id/following"
        style="@style/profession"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/following"
        app:layout_constraintStart_toEndOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/following_value" />

    <View
        android:id="@+id/horizontal_line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="10dp"
        android:background="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/follow_button"
        android:text="@string/follow"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        app:backgroundTint="@color/airplane_button"
        app:cornerRadius="10dp"
        app:icon="@drawable/icon_airplane"
        app:iconSize="25dp"
        app:iconTint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toEndOf="@+id/follow_button"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_line_2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/follow_button" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="20dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                app:backgroundTint="@android:color/transparent"
                app:menu="@menu/bottom_navigation_menu" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_add"
            app:layout_anchor="@id/bottom_app_bar"
            tools:ignore="ContentDescription" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>